setting up navigations for company recruiters

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
     <div class="container">
       <h1 class="display-1 text-white">Smart Hiring</h1>
       <h2 class="display-4 text-white">Taking the guesswork out of finding the right recruiter. Leaving you to just hire.</h2>
-      <a href=<%=new_user_registration_url%> class="btn btn-primary btn-lg active" role="button" aria-pressed="true">I'm hiring</a>
+      <a href=<%=new_user_registration_url%> class="btn btn-primary btn-lg" role="button">I'm hiring</a>
     </div>
   </div>
 </header>
