--- a/app/mailers/views/company_details/edit.html.erb
+++ b/app/mailers/views/company_details/edit.html.erb
@@ -1,2 +1,2 @@
 <h1>CompanyDetails#edit</h1>
-<p>Find me in app/views/company_details/edit.html.erb</p>
+<p>Find me in app/views/company/edit.html.erb</p>
