--- a/app/mailers/views/company_details/new.html.erb
+++ b/app/mailers/views/company_details/new.html.erb
@@ -1,2 +1,2 @@
 <h1>CompanyDetails#new</h1>
-<p>Find me in app/views/company_details/new.html.erb</p>
+<p>Find me in app/views/company/new.html.erb</p>
