--- a/app/mailers/views/company_details/show.html.erb
+++ b/app/mailers/views/company_details/show.html.erb
@@ -1,2 +1,2 @@
 <h1>CompanyDetails#show</h1>
-<p>Find me in app/views/company_details/show.html.erb</p>
+<p>Find me in app/views/company/show.html.erb</p>
