--- a/app/views/layouts/shared/_company_navigation.html.erb
+++ b/app/views/layouts/shared/_company_navigation.html.erb
@@ -12,6 +12,6 @@
     <a class="nav-link" href=<%=settings_path%>>Settings</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href=<%=company_details_path%>>Company Details</a>
+    <a class="nav-link" href=<%=company_path%>>Company Details</a>
   </li>
 </ul>
