adding enquiries and settings pages

--- a/app/views/layouts/shared/_company_navigation.html.erb
+++ b/app/views/layouts/shared/_company_navigation.html.erb
@@ -1,6 +1,6 @@
 <ul class="nav nav-tabs">
   <li class="nav-item">
-    <a class="nav-link active" href=<%=dashboard_index_path%>>Dashboard</a>
+    <a class="nav-link active" href=<%=dashboard_path%>>Dashboard</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href=<%=vacancies_path%>>Vacancies</a>
