navigation tabs aware of page name

--- a/app/views/layouts/shared/_company_navigation.html.erb
+++ b/app/views/layouts/shared/_company_navigation.html.erb
@@ -1,17 +1,13 @@
+ <% tabs = [{name: "Dashboard", path: dashboard_path , class: (@page_name == "dashboard" ? "active" : nil)},
+          {name: "Vacancies", path: vacancies_path, class: (@page_name == "vacancy" ? "active" : nil)},
+         {name: "Enquiries", path: enquiries_path, class: (@page_name == "enquiries" ? "active" : nil)},
+         {name: "Settings", path: settings_path, class: (@page_name == "settings" ? "active" : nil)},
+          {name: "Company Details", path: company_path ,class: (@page_name == "company" ? "active" : nil)}]%>
+
 <ul class="nav nav-tabs">
-  <li class="nav-item">
-    <a class="nav-link active" href=<%=dashboard_path%>>Dashboard</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href=<%=vacancies_path%>>Vacancies</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href=<%=enquiries_path%>>Enquiries</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href=<%=settings_path%>>Settings</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href=<%=company_path%>>Company Details</a>
-  </li>
+  <% tabs.each do |tab| %>
+    <li class="nav-item">
+      <a class="nav-link <%=tab[:class]%>" href=<%=tab[:path]%>><%=tab[:name]%></a>
+    </li>
+  <% end %>
 </ul>
