--- a/app/views/vacancies/_form.html.erb
+++ b/app/views/vacancies/_form.html.erb
@@ -22,6 +22,11 @@
   </div>
 
   <div class="field">
+    <%= form.label :requirements %>
+    <%= form.text_area :requirements, id: :vacancy_requirements %>
+  </div>
+
+  <div class="field">
     <%= form.label :start_date %>
     <%= form.datetime_select :start_date, id: :vacancy_start_date %>
   </div>
